# ECEN-404-SAMSUNG-Lime-Capstone-Files

./: README.md
403/Alex/: README.md  i2c.py
403/Matthew/: README.md
403/Matthew/FlutterWebAppCode/: firebase.json  pubspec.yaml
403/Matthew/FlutterWebAppCode/lib/: main.dart  theGlobals.dart
403/Matthew/InitialCode/: firstfile.cpp
403/Matthew/Matthew's Flutter WebappCode/: main.dart
403/Matthew/lib/: firebase_options.dart  main.dart
403/Ryon/Computational Model MATLAB Files/: DOETuningData.m  Demo Data1.csv  Demo Data2.csv  FinalDemo403.m  computeSteadyStateConcentration.m  find_best_polynomial.m  mcuSimulation.m  optimizeChemicalParametersMulti.m  optimizeLimeFlowRate.m  weightedError.m
Alex/: README.md  i2c.py
Computational Model MATLAB Files/attachments (9)/: Demo Data1.csv  computeSteadyStateConcentration.m  find_best_polynomial.m  optimizeChemicalParametersMulti.m  optimizeLimeFlowRate.m
ESP32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
ESP32/main/: CMakeLists.txt  PIDCoefficients.txt  PolyCoefficients.txt  custom_globals.cpp  custom_globals.h  database.cpp  i2c_driver.cpp  i2c_driver.h  main.cpp  model.cpp  model.h  pH_driver.cpp  pH_driver.h
InitialCode/: firstfile.cpp
Matthew/: README.md
Matthew/FlutterWebAppCode/: pubspec.yaml
Matthew/FlutterWebAppCode/lib/: main.dart  theGlobals.dart
Matthew/Matthew's Flutter WebappCode/: main.dart
Ryon/Computational Model MATLAB Files/: DOETuningData.m  Demo Data2.csv  FinalDemo403.m  mcuSimulation.m  weightedError.m
lib/: main.dart
